[gd_scene load_steps=2 format=3 uid="uid://cq7xl5x6tndo"]

[ext_resource type="Script" path="res://scenes/profile_select.gd" id="1_v8n2q"]

[node name="ProfileSelect" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_v8n2q")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.15, 0.15, 0.2, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -350.0
offset_top = -300.0
offset_right = 350.0
offset_bottom = 300.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20

[node name="TitleLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Selecciona tu Perfil"
theme_override_font_sizes/font_size = 36
alignment = 1

[node name="HSeparator1" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="ProfilesScroll" type="ScrollContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="ProfilesList" type="VBoxContainer" parent="VBoxContainer/ProfilesScroll"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 10

[node name="HSeparator2" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="CreateSection" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="CreateLabel" type="Label" parent="VBoxContainer/CreateSection"]
layout_mode = 2
text = "Crear nuevo perfil:"
theme_override_font_sizes/font_size = 14

[node name="NewProfileInput" type="LineEdit" parent="VBoxContainer/CreateSection"]
layout_mode = 2
placeholder_text = "Escribe el nombre del perfil..."
custom_minimum_size = Vector2(0, 40)

[node name="CreateButton" type="Button" parent="VBoxContainer/CreateSection"]
layout_mode = 2
text = "Crear Perfil"
custom_minimum_size = Vector2(0, 40)

[node name="BackButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Volver al Men√∫"
custom_minimum_size = Vector2(0, 40)
